# sha-256

./: CMakeLists.txt  Dockerfile  README.md
examples/: main.cpp
include/: sha256_c.hpp
sanity-check/: except_c.hpp  main.cpp
